--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,3 +20,19 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #ffb8ba;
 }
+
+.signUpButton {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #d81e8e;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.signUpButton:hover {
+    background-color: #eb1d7a;
+}
