--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,24 @@
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row; 
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: white;
+}
+
+.imageContainer {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imageContainer img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 .login {
@@ -12,19 +27,50 @@
     align-items: center;
     justify-content: center;
     width: 50vh;
-    height: 27vh;
-    padding: 20px;
-    max-width: 50vh;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #ffb8ba;
+    background-color: #e1dcdc;
+}
+
+.title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+    color: black;
+}
+
+.inputField {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #709d94;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+.botao {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #709d94; 
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.botao:hover {
+    background-color: #ca302e; 
 }
 
 .signUpButton {
     margin-top: 10px;
     padding: 10px;
-    background-color: #d81e8e;
+    background-color: #709d94;
     color: white;
     border: none;
     border-radius: 5px;
@@ -34,5 +80,5 @@
 }
 
 .signUpButton:hover {
-    background-color: #eb1d7a;
+    background-color: #c1d5d8;
 }
