--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f1f1f1;
+    background-color: #f0f0f0;
 }
 
 .profileCard {
@@ -11,11 +11,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 25vh;
+    width: 100vh;
     padding: 20px;
     border-radius: 10px;
     background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 .profilePic {
@@ -30,12 +31,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
 .card {
     margin: 10px 0;
     padding: 10px;
-    background-color: #e0e0e0;
+    background-color: #ece5dc;
+    color: #a53b39;
     border-radius: 5px;
     width: 100%;
     text-align: center;
